Revert "Don't display icons in fields with errors (alignment issues) [SCI-9217]"

--- a/app/assets/stylesheets/shared/form_errors.scss
+++ b/app/assets/stylesheets/shared/form_errors.scss
@@ -9,7 +9,7 @@
 .form-group.has-error {
   margin-bottom: 0;
 
-  .sn-icon {
-    display: none;
+  .form-control {
+    height: auto;
   }
 }
